--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             overflow-x: hidden;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #155fe7;
             color: white;
             padding: 20px;
             display: flex;
