--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                         
                         <p>This project develops a machine learning model to predict solar panel failures, enhancing maintenance and reducing operational costs. Using Python 3.9.12 and libraries like pandas, numpy, and scikit-learn, the model analyzes factors such as temperature, humidity, and panel age. The dataset is sourced from a study on fault scenarios in grid-connected PV systems. The goal is to enable proactive maintenance through accurate fault prediction.</p>
 
-                        <a href="#" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
+                        <a href="https://github.com/mayur-ml/Solar-Panel-Failure-Prediction-" class="read-more">Read more <i class="ti-angle-double-right"></i></a>
                     </div>
 
             </div>
