--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">Machine Learning Engineer</h5>
-                <h9 class="mt-20">As an AI enthusiast deeply immersed in the ever-evolving world of technology, my journey has led me to an exhilarating intersection where I explore the frontiers of Generative AI, 3D GANs, Transformers, and Multi-modal Machine Learning. Currently serving as a Machine Learning Analyst at NeuralGarage, I specialize in leveraging cutting-edge open-source models for speech and image processing, driving innovation in ongoing projects. My passion lies in pushing the boundaries of ML capabilities while fostering development within my team. With a proven track record of collecting, cleaning, and analyzing data, as well as building and deploying machine learning models, I am dedicated to delivering impactful solutions for real-world challenges.</h9>
+                <h9 class="mt-20">As an AI enthusiast deeply immersed in the ever-evolving world of technology, my journey has led me to an exhilarating intersection where I explore the frontiers of Generative AI, 3D GANs, Transformers, and Multi-modal Machine Learning. <strong>I’m currently rocking the Machine Learning Analyst role at NeuralGarage,</strong> I specialize in leveraging cutting-edge open-source models for speech and image processing, driving innovation in ongoing projects. My passion lies in pushing the boundaries of ML capabilities while fostering development within my team. With a proven track record of collecting, cleaning, and analyzing data, as well as building and deploying machine learning models, I am dedicated to delivering impactful solutions for real-world challenges.</h9>
                 
             </div>
             <div class="col-lg-4 about-card">
@@ -323,7 +323,7 @@
                             </div>
                             <h6>Marathi</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 45%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h6>Hindi</h6>
                             <div class="progress mb-3">
