--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                             <h6 class="title">2023 - Present</h6>
                             <h5 class="title">Machine Learning Analyst</h5>
                             <h6>NeuralGarage (VisualDub.ai) - Bengaluru.</h6>
-                            <p class="subtitle">Implemented state-of-the-art open-source models for speech and image processing, advancing ongoing projects. Reimplemented research papers to enhance facial landmarks tracking and audio processing techniques. Employed feature concatenation techniques to integrate multiple modalities of data, improving lip movement synthesis results. Contributed to internal initiatives aimed at advancing the organization's machine learning capabilities.</p>
+                            <p class="subtitle">Developed cutting-edge models for speech and image processing and reworked research to enhance facial landmarks tracking and audio techniques. Created a robust desktop editor for VisualDub.ai with Python-PyQt, including features for updates, anti-piracy, and user management. Spearheaded integration of advanced systems for improved functionality and security. Actively contributed to internal initiatives, driving innovation and elevating the organization's machine learning capabilities.</p>
                             <hr>
                             <h6 class="title">02/2023 – 08/2023</h6>
                             <h5 class="title">Data Scientist</h5>
