--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                             <hr>
                             <h6 class="title">11/2022 – 02/2023</h6>
                             <h5 class="title">Data Scientist - Intern</h5>
-                            <h6>Connou - Tübingen, Germany (Remote)</h6>
+                            <h6>innodatatics.ai - Bengaluru. </h6>
                             <p class="subtitle">Supported senior team members in ML projects, conducting data preprocessing, model development, and evaluation, while also contributing innovative ideas and insights derived from exploratory data analysis, algorithm implementation, and hyperparameter tuning.</p>
                         </div>
                     </div>
